	PR c++/54207 	* except.c (build_noexcept_spec): Avoid direct comparison 	with boolean_true_node or boolean_false_node, instead use 	operand_equal_p and/or INTEGER_CST check. 	* pt.c (tsubst_exception_specification): Likewise. 	* typeck2.c (merge_exception_specifiers): Likewise.

* g++.dg/cpp0x/noexcept18.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194263 138bc75d-0d04-0410-961f-82ee72b054a4